# smarttree

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PROJECT_PLAN.md  README.md
.github/workflows/: ci.yml  release.yml
examples/: README_snippets.md
examples/outputs/: module_md.md  module_text.txt
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  model.rs
src/discover/: markers.rs  mod.rs  summary.rs  walk.rs  workspace.rs
src/render/: md.rs  mod.rs  text.rs
tests/: integration.rs
tests/fixtures/node_simple/: README.md  expected_module_md.md  expected_module_text.txt  package.json
tests/fixtures/pnpm_monorepo/: expected_module_text.txt
tests/fixtures/pnpm_monorepo/apps/api/: package.json
tests/fixtures/pnpm_monorepo/apps/web/: package.json
tests/fixtures/python_project/: README.md  expected_module_text.txt  pyproject.toml
tests/fixtures/rust_workspace/: expected_module_text.txt
tests/fixtures/rust_workspace/crates/cli/: Cargo.toml
tests/fixtures/rust_workspace/crates/core/: Cargo.toml
tests/fixtures/rust_workspace/crates/core/src/: lib.rs
