[package]
name = "smarttree"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A project-aware tree command that shows modules and boundaries, not just files."

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
globset = "0.4"
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.10"
